src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
  background-color: #ffd6e0;
  display: flex;
  justify-content: center;
  padding: 50px 20px;
  min-height: 100vh;
}

.container {
  background-color: #ffffff;
  border-radius: 45px;
  padding: 35px;
  width: 120%;
  max-width: 500px;
  box-shadow: 0 4px 20px rgba(0, 0, 10, 0.1);
  height: fit-content;
}

h1 {
  font-size: 28px;
  color: #1a1a2e;
  margin-bottom: 24px;
  text-align: center;
}

.input-row {
  display: flex;
  gap: 10px;
  margin-bottom: 30px;
}

input {
  flex: 1;
  padding: 12px 16px;
  border: 2px solid #e0e0e0;
  border-radius: 8px;
  font-size: 15px;
  outline: none;
  transition: border-color 0.2s;
}

input:focus {
  border-color: #800020;
}

.add-btn {
  padding: 12px 20px;
  background-color: #800020;
  color: whitesmoke;
  border: none;
  border-radius: 8px;
  font-size: 15px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.add-btn:hover {
  background-color: #1a1a2e;
}

ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 12px;
}

li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #f8f9ff;
  padding: 14px 16px;
  border-radius: 8px;
  border: 1px solid #e8e8f0;
}

.task-text {
  flex: 1;
  font-size: 15px;
  color: #333;
  cursor: pointer;
}

.task-text.completed {
  text-decoration: line-through;
  color: #aaa;
}

.delete-btn {
  background-color: #800020;;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 6px 12px;
  font-size: 13px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.delete-btn:hover {
  background-color: #1a1a2e;
}

.deadline-input {
  padding: 6px 10px;
  border: 1px solid #e0e0e0;
  border-radius: 6px;
  font-size: 13px;
}

.deadline-text {
  font-size: 13px;
  color: #666;
  margin: 0 8px;
}

.done-btn {
  background-color: #22c55e;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 6px 12px;
  font-size: 13px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.done-btn:hover {
  background-color: #16a34a;
}

.celebration {
  font-size: 20px;
  animation: pop 0.4s ease;
}

@keyframes pop {
  0% { transform: scale(0); }
  70% { transform: scale(1.3); }
  100% { transform: scale(1); }
}

.edit-input {
  flex: 1;
  padding: 6px 10px;
  border: 1px solid #4f46e5;
  border-radius: 6px;
  font-size: 14px;
}

.edit-btn {
  background-color: #f59e0b;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 6px 12px;
  font-size: 13px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.edit-btn:hover {
  background-color: #d97706;
}

.save-btn {
  background-color: #4f46e5;
  color: white;
  border: none;
  border-radius: 6px;
  padding: 6px 12px;
  font-size: 13px;
  cursor: pointer;
  transition: background-color 0.2s;
}

.save-btn:hover {
  background-color: #4338ca;
}

